--- a/admin/index.html
+++ b/admin/index.html
@@ -307,7 +307,7 @@
         </div>
         <button type="submit" class="btn">Login</button>
       </form>
-      <button class="pair-btn" onclick="window.location='GGGGG'">
+      <button class="pair-btn" onclick="window.location='https://xbot-auth.onrender.com'">
         Are you lost? Click here to go to pair site
       </button>
     </div>
